--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 
 	<!-- css -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/normalize.css?v=1.0">
+	<link rel="stylesheet" href="css/jquery.zoom.css?v=1.0">
 	<link rel="stylesheet" href="css/common.css">
 </head>
 <body id="bhContainer">
 	<?xml version="1.0" encoding="utf-8"?>
 	<!-- Generator: Adobe Illustrator 25.4.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-	<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	<svg class="pine" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 		 width="3454.7px" height="1617.6px" viewBox="0 0 3454.7 1617.6" style="enable-background:new 0 0 3454.7 1617.6;"
 		 xml:space="preserve">
 	<style type="text/css">
@@ -15631,12 +15633,68 @@
 	<text transform="matrix(1 0 0 1 1427.9235 789.7796)" class="st165 st133 st166 st230">BLOCK - A</text>
 	</svg>
 
+	<!-- Modal -->
+	<div class="modal fade" id="plotInfo" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+	  <div class="modal-dialog modal-dialog-centered" role="document">
+	    <div class="modal-content">
+	      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	        <span aria-hidden="true">&times;</span>
+	      </button>
+	      <div class="modal-body">
+	      	<div class="popover-body">
+	      	  <div class="pop-content block">
+	      	    <div class="pop-title"> Block </div>
+	      	    <div class="pop-value"></div>
+	      	  </div>
+	      	  <div class="pop-content sector">
+	      	    <div class="pop-title"> Sector </div>
+	      	    <div class="pop-value"> '+splitted[2]+'</div>
+	      	  </div>
+	      	  <div class="pop-content road">
+	      	    <div class="pop-title"> Road </div>
+	      	    <div class="pop-value"> '+splitted[3]+'</div>
+	      	  </div>
+	      	  <div class="pop-content plot-number">
+	      	    <div class="pop-title"> Plot </div>
+	      	    <div class="pop-value"> '+splitted[4]+'</div>
+	      	  </div>
+	      	  <div class="pop-content size">
+	      	    <div class="pop-title"> Size </div>
+	      	    <div class="pop-value"> 10 Katha </div>
+	      	  </div>
+	      	  <div class="pop-content facing">
+	      	    <div class="pop-title"> Facing </div>
+	      	    <div class="pop-value"> North </div>
+	      	  </div>
+	      	  <div class="pop-content file-number">
+	      	    <div class="pop-title"> File Number </div>
+	      	    <div class="pop-value"> 44515 </div>
+	      	  </div>
+	      	  <div class="pop-content client-phone">
+	      	    <div class="pop-title"> Client Phone No. </div>
+	      	    <div class="pop-value"> 01625423992 </div>
+	      	  </div>
+	      	  <div class="pop-content client-name">
+	      	    <div class="pop-title"> Client Name </div>
+	      	    <div class="pop-value"> Arafat Hossain Adi </div>
+	      	  </div>
+	      	  <div class="pop-content client-address">
+	      	    <div class="pop-title"> Client Address </div>
+	      	    <div class="pop-value"> Saiham SkyView Tower </div>
+	      	  </div>
+	      	</div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 </body>
 
 <!-- script -->
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
+<script src="js/zoom.jquery.js"></script>
 <script src="js/main.js"></script>
 <script>
 
@@ -15644,17 +15702,13 @@
 	var plots = $('.plotWrapper');
 	var plotAmount = plots.length;
 
-	for (var i=0; i < plotAmount; i++) {
-		var singlePlotIdNoHash = plots[i].id;
-		var splitted = singlePlotIdNoHash.split("_x5F_");
-		var singlePlotId = "#" + plots[i].id;
-		var plotWidth = $(singlePlotId + ">rect").attr("width") + "px";
-		var plotHeight = $(singlePlotId + ">rect").attr("height") + "px";
-		var plotFill = $(singlePlotId + ">rect").css("fill");
-		var plotX = $(singlePlotId + ">rect").attr("x") + "px";
-		var plotY = $(singlePlotId + ">rect").attr("y") + "px";
-
-		$('#bhContainer').append('<div id="' + singlePlotIdNoHash + '" class="common" style="background:' + plotFill + '; width:' + plotWidth + '; height:' + plotHeight + '; top:' + plotY + '; left:' + plotX + ';" data-html="true" data-placement="auto" data-popover-content="#plotInfo'+singlePlotIdNoHash+'" data-toggle="popover" data-trigger="hover" href="#" tabindex="0">'+splitted[4]+' <div class="d-none" id="plotInfo'+singlePlotIdNoHash+'"> <div class="popover-body"> <div class="pop-content block"> <div class="pop-title"> Block </div> <div class="pop-value"> '+splitted[1]+'</div> </div> <div class="pop-content sector"> <div class="pop-title"> Sector </div> <div class="pop-value"> '+splitted[2]+'</div> </div> <div class="pop-content road"> <div class="pop-title"> Road </div> <div class="pop-value"> '+splitted[3]+'</div> </div> <div class="pop-content plot-number"> <div class="pop-title"> Plot </div> <div class="pop-value"> '+splitted[4]+'</div> </div> <div class="pop-content size"> <div class="pop-title"> Size </div> <div class="pop-value"> 10 Katha </div> </div> <div class="pop-content facing"> <div class="pop-title"> Facing </div> <div class="pop-value"> North </div> </div> <div class="pop-content file-number"> <div class="pop-title"> File Number </div> <div class="pop-value"> 44515 </div> </div> <div class="pop-content client-phone"> <div class="pop-title"> Client Phone No. </div> <div class="pop-value"> 01625423992 </div> </div> <div class="pop-content client-name"> <div class="pop-title"> Client Name </div> <div class="pop-value"> Arafat Hossain Adi </div> </div> <div class="pop-content client-address"> <div class="pop-title"> Client Address </div> <div class="pop-value"> Saiham SkyView Tower </div> </div> </div> </div> </div>');
-	}
+	$('.plotWrapper').click(function(){
+	    var splitted = this.id.split("_x5F_");
+	    $(".block .pop-value").html(splitted[1]);
+	    $(".sector .pop-value").html(splitted[2]);
+	    $(".road .pop-value").html(splitted[3]);
+	    $(".plot-number .pop-value").html(splitted[4]);
+	    $('#plotInfo').modal();
+	});
 </script>
 </html>
